...
import java.time.LocalDate
import com.costular.atomtasks.core.ui.R.string as S

private const val DaysToShow = 365L
private const val HeaderAnimationMillis = 200
private const val ExpandedChevronRotation = 180f
internal const val TestTagWeekCalendar = "AgendaWeekCalendar"
internal const val TestTagMonthCalendar = "AgendaMonthCalendar"

@Suppress("LongMethod")
@Composable
internal fun AgendaHeader(
    selectedDay: Day,
    isExpanded: Boolean,
...
