...
import com.ramcosta.composedestinations.result.ResultRecipient
import java.time.LocalDate
import java.time.LocalTime
import java.time.temporal.ChronoUnit
import kotlinx.collections.immutable.persistentListOf

const val TestTagHeader = "AgendaTitle"

@Destination<AgendaGraph>(
    start = true,
)
@Composable
fun AgendaScreen(
...
                    end = AppTheme.dimens.contentMargin,
                    top = AppTheme.dimens.spacingLarge,
                    bottom = ContentPaddingForFAB.dp,
                ),
                modifier = modifier
                    .fillMaxSize()
                    .testTag("AgendaTaskList"),
                onClickMore = onClickTaskMore,
                onDeleteTask = onDeleteTask,
                onDragStopped = onDragStopped,
            )
        }

...
